--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -70,6 +70,75 @@ ul
     margin-bottom:10px;    
 }
 
+.dashBoard
+{
+   border: 1px solid #dddddd;
+   border-collapse:collapse;
+   font-size:13px;   
+   width:100%;  
+}
+
+.dashBoard tr
+{
+  
+}
+
+.dashBoard tr th
+{
+    border: solid 1px #dddddd;
+    color: #000;
+    font-weight: normal;
+    vertical-align: middle;
+    padding: 4px 6px;
+    min-width:50px;
+    text-align:center;
+}
+
+.dashBoard tr td
+{
+    border: solid 1px #dddddd;
+    color: #000;
+    vertical-align: middle;
+    padding: 4px 6px;
+    min-width:50px;
+    text-align:center;
+}
+
+.aquaBackground
+{
+    background-color:#0083f0;
+    font-weight:bold;
+} 
+
+.redBackground
+{
+    background-color:Red;    
+    font-weight:bold !important;
+    color:White !important;
+}
+
+.grayBackground td
+{
+    background-color:#EEEEEE;    
+    font-weight:bold;    
+}
+
+.grayBackground th
+{
+    background-color:#EEEEEE;    
+    font-weight:bold !important;    
+}
+
+.darkGrayBackground td
+{
+    background-color:#B3B4B5;    
+    font-weight:bold !important; 
+}
+
+.boldText th
+{  
+    font-weight:bold !important;    
+}
 
 /* HEADINGS   
 ----------------------------------------------------------*/
