--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -9,12 +9,13 @@ html, body, .mainForm
 
 body   
 {
-    background: #b6b7bc;
-    font-size: .80em;
-    font-family: "Helvetica Neue", "Lucida Grande", "Segoe UI", Arial, Helvetica, Verdana, sans-serif;
-    margin: 0px;
-    padding: 0px;
-    color: #696969;
+    background: #fff; /* Old browsers */ /*border-top: solid 10px #000;*/
+    color: #000;
+    font-size: 11px;
+    font-family: Arial, Verdana, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
 }
 
 a:link, a:visited
@@ -170,42 +171,35 @@ ul
 
 h1, h2, h3, h4, h5, h6
 {
-    color: #666666;
-    font-variant: small-caps;
-    text-transform: none;
-    font-weight: 200;
-    margin-bottom: 0px;
+    color: #000;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 h1
 {
-    padding-bottom: 0px;
-    margin-bottom: 0px;
+    font-size: 2em;
 }
-
 h2
 {
-    color: #2679B5;
-    font-size: 24px !important;
-    font-weight: lighter;
-    line-height: 40px;
-    margin: 0 8px;
-    padding: 0;
+    font-size: 1.75em;
 }
-
 h3
 {
     font-size: 1.2em;
 }
-
 h4
 {
     font-size: 1.1em;
 }
-
 h5, h6
 {
     font-size: 1em;
+}
+h5 a:link, h5 a:visited, h5 a:active
+{
+    padding: 0;
+    text-decoration: none;
 }
 
 /* this rule styles <h1> and <h2> tags that are the 
@@ -215,10 +209,15 @@ first child of the left and right table columns */
     margin-top: 0px;
 }
 
-.pageHeader
+.pageHeader h2
 {
     border-bottom: 1px dotted #E2E2E2;
     margin: 0 0 12px;
+    color: #2679B5;
+    font-size: 24px;
+    font-weight: lighter;
+    padding: 0;
+    line-height: 40px;
 }
 
 .sections
@@ -231,34 +230,38 @@ first child of the left and right table columns */
     margin:0px 0px 20px 0px;    
 }
 
+.subSections span
+{
+    margin-right:20px;    
+}
+
+.subSections h3
+{
+    font-size: 13px;   
+}
 
 /* PRIMARY LAYOUT ELEMENTS   
 ----------------------------------------------------------*/
 
 .page
 {
-    /*width: 960px;*/
     background-color: #fff;
-/*    margin: 20px auto 0px auto;*/
-/*    border: 1px solid #496077;*/
 }
-
-/*
-.header
-{
-    position: relative;
-    margin: 0px;
-    padding: 0px;
-    background-color: #0083f0;
-    width: 100%;
-}
-*/
 
 .header {
-    background: linear-gradient(to bottom, #3A9CEE 0%, #005FA6 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
     height: 50px;
-    text-transform: uppercase;
+    background: #3a9cee; /* Old browsers */
+    background: -moz-linear-gradient(top, #3a9cee 0%, #005fa6 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3a9cee), color-stop(100%, #005fa6)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #3a9cee 0%, #005fa6 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #3a9cee 0%, #005fa6 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #3a9cee 0%, #005fa6 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #3a9cee 0%, #005fa6 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3a9cee', endColorstr='#005fa6', GradientType=0 ); /* IE6-9 */
+    padding: 0 20px;
     vertical-align: middle;
+    font-size: 24px;
+    text-transform: uppercase;    
 }
 
 .smallTableHeader {
@@ -274,7 +277,7 @@ first child of the left and right table columns */
     font-size: 24px;
     font-weight: 700;
     margin: 0px;
-    padding: 5px 0px 0px 20px;
+    padding: 10px 0px 0px 20px;
     color: #f9f9f9;
     border: none;
     vertical-align: top;
@@ -282,7 +285,6 @@ first child of the left and right table columns */
 
 .logos
 {
-    float: right;
     font-size: 14px;
     padding:10px 20px 0px 0px;
     text-align: right;
@@ -299,15 +301,13 @@ first child of the left and right table columns */
     width: 41px;    
 }
 
-span.hosName 
+div.hosName 
 {
-    margin-top: 10px;
     vertical-align: baseline;
 }
 
-span.NHS_name {
+div.NHS_name {
     font-size: 10px;
-    position: absolute;
     right: 75px;
     top: 27px;
 }
@@ -320,9 +320,17 @@ span.NHS_name {
 
 .blueBackGround
 {
-    background: linear-gradient(to bottom, #1B88E5 0%, #0F55B7 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
-    height: 100%;
-    overflow: hidden;  
+    height:100%;
+    overflow: hidden;
+    background: #0f55b7; /* Old browsers */
+    background: #1b88e5; /* Old browsers */
+    background: -moz-linear-gradient(top, #1b88e5 0%, #0f55b7 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1b88e5), color-stop(100%, #0f55b7)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #1b88e5 0%, #0f55b7 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #1b88e5 0%, #0f55b7 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #1b88e5 0%, #0f55b7 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #1b88e5 0%, #0f55b7 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1b88e5', endColorstr='#0f55b7', GradientType=0 ); /* IE6-9 */
 }
 
 .leftCol
@@ -357,6 +365,12 @@ span.NHS_name {
     float:left;    
 }
 
+.navigationBar a
+{
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
 div.menu
 {
     padding: 4px 0px 4px 8px;
@@ -370,11 +384,16 @@ div.menu ul
     width: auto;
 }
 
+div.menu ul li
+{
+    border: 1px #EEEEEE solid;    
+}
+
 div.menu ul li a, div.menu ul li a:visited
 {
-    background-color: #465c71;
-    border: 1px #4e667d solid;
-    color: #dde4ec;
+    background-color: #EEEEEE;
+    border: 1px #EEEEEE solid;
+    color: #707070;
     display: block;
     line-height: 1.35em;
     padding: 4px 20px;
@@ -384,8 +403,8 @@ div.menu ul li a, div.menu ul li a:visited
 
 div.menu ul li a:hover
 {
-    background-color: #bfcbd6;
-    color: #465c71;
+    background-color: #4ad;
+    color: White;
     text-decoration: none;
 }
 
@@ -478,7 +497,7 @@ div.accountInfoCentered
     margin-left: 35%;
     margin-top: 10%;
     padding: 20px;
-    width: 25%;
+    width: 30%;
 }
 
 /* MISC  
@@ -487,6 +506,15 @@ div.accountInfoCentered
 .clear
 {
     clear: both;
+}
+
+.clear-fix:after
+{
+    content: ".";
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
 }
 
 .title
@@ -501,20 +529,22 @@ div.accountInfoCentered
 {
     display: block;
     text-align: right;
-    padding: 10px;
+    padding: 8px;
     color: #666666;
     float:right;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.menu .dynamic
+{
+    border-bottom: 1px solid white;    
 }
 
 .adminNavigation
 {
     float:right;
     margin-right:20px
-}
-
-.loginDisplay a:link
-{
-    
 }
 
 .loginDisplay a:visited
@@ -538,14 +568,12 @@ div.accountInfoCentered
     float:left;    
 }
 
-.loginIcon
-{
-    
-}
-
 .login legend
 {
-    margin-bottom:10px;    
+    text-align: left;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+    font-size: 2em;
 }
 
 .bold
@@ -555,17 +583,171 @@ div.accountInfoCentered
 
 .submitButton
 {    
-    padding-right: 10px;
-    background: linear-gradient(#4A9BEA, #1F7BE5) repeat scroll 0 0 rgba(0, 0, 0, 0);
-    border: 1px solid #1371DC;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
     border-radius: 6px;
-    color: #FFFFFF;
+    border: 1px solid #1371dc;
     display: inline-block;
+    color: #fff;
     font-family: arial;
     font-size: 11px;
     font-weight: 700;
-    margin: 5px 0;
-    padding: 3px 8px;
     text-decoration: none;
+    cursor: hand;
+    padding: 3px 8px;
+    margin: 5px 0;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    background: #4a9bea;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#4a9bea), to(#1F7BE5));
+    background: -webkit-linear-gradient(#4a9bea, #1F7BE5);
+    background: -moz-linear-gradient(#4a9bea, #1F7BE5);
+    background: -ms-linear-gradient(#4a9bea, #1F7BE5);
+    background: -o-linear-gradient(#4a9bea, #1F7BE5);
+    background: linear-gradient(#4a9bea, #1F7BE5);
 }
 
+.login_container
+{
+    position: absolute;
+    bottom: 80px;
+    width: 500px;
+    right: 0px;
+    overflow: hidden;
+}
+.login_container .lock
+{
+    margin-bottom: -95px;
+    z-index: 10;
+}
+.login_content
+{
+    background: #FFFFFF;
+    border: 1px solid #696;
+    padding: 30px 30px 20px 30px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-box-shadow: #666 0px 2px 3px;
+    -moz-box-shadow: #666 0px 2px 3px;
+    box-shadow: #666 0px 2px 3px;
+    margin-right: -15px;
+}
+.login_content h1
+{
+    padding-left: 120px;
+    text-align: left;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+}
+.login_content span
+{
+    font-size: 14px;
+    
+    text-transform: uppercase;
+    display:inline-block;
+}
+.login_content input[type=text], .login_content input[type=password]
+{
+    padding-left: 10px;
+    width: 260px;
+}
+.login_content input[type=button]
+{
+    margin: 10px 0 0 125px;
+}
+.login_content a
+{
+    margin-left: 190px;
+    text-decoration: none;
+}
+.login_content i
+{
+    padding-right: 10px;
+}
+.ie7 .login_content
+{
+    
+}
+.login_footer
+{
+    text-align: center;
+    margin-top: 20px;
+    vertical-align: middle;
+    display:none
+}
+.login_footer span
+{
+    color: #fff;
+}
+.login_footer img
+{
+    height: 25px;
+    margin-right: 12px;
+}
+
+.login_panel input[type=submit]
+{
+    padding:0px 8px;
+    margin-top: 1px; 
+    vertical-align:top
+     
+}
+
+.ie7 .login_panel input[type=submit]
+{    
+    margin: 0; 
+     
+}
+
+.login_panel span
+{
+   padding:0;
+    margin: 0px;  
+    color:#707070    
+}
+
+.fieldSeperator
+{
+    margin:10px 0px 5px 0px;    
+}
+
+.fieldName
+{
+    width:120px;    
+}
+
+/* Page Layout */
+
+input[type=text], input[type=password], textarea
+{
+    color: #000;
+    width: 92%;
+    display: inline-block;
+    margin: 5px 0;
+    padding: 2px 5px;
+    border:1px solid #dddddd
+}
+
+input[type=text]:hover, input[type=password]:hover, textarea:hover
+{
+     border:1px solid #26a0da
+}
+
+
+input[type=text], input[type=password]
+{
+    height: 17px;
+}
+
+label, span
+{
+    vertical-align: top;
+    display: inline-block;
+    text-align: left;
+    font-weight: 700;
+    height: 17px;
+    margin: 2px 0;
+    padding: 2px 1px;    
+}
