--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -563,6 +563,7 @@ div.accountInfoCentered
     display: block;
     text-align: right;
     padding: 8px;
+    margin-right:30px;
     color: #666666;
     float:right;
     font-size: 12px;
